--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ section {
   bottom: 2.5rem;
 }
 
-.details-container {
+.details-containers {
   padding: 1.5rem;
   flex: 1;
   background: white;
@@ -304,12 +304,53 @@ section {
   border-color: rgb(163, 163, 163);
   text-align: center;
 }
+
 .section-container {
   gap: 4rem;
   height: 80%;
 }
+
 .section__pic-container {
   height: 400px;
   width: 400px;
-  margin: auto, 0;
+  margin: auto 0;
+}
+
+/* EXPERIENCE SECTION */
+
+#experience {
+  position: relative;
+}
+
+.experience-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+}
+
+.experience-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: space-around;
+}
+
+article {
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+
+article .icon {
+  cursor: default;
 }
